[package]
name = "jq-edit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.22"
once_cell = "1.19.0"
pretty_env_logger = "0.5.0"
ratatui = "0.27.0"
regex = "1.10.5"
subprocess = "0.2.9"
tempfile = "3.10.1"
termion = "4.0.2"
tui-textarea = "0.5.1"
